unpackaged/main/default/objects/Account/fields/Account_Can_Order_via_SAP__c.field-meta.xml
<CustomField>
    <fullName>Account_Can_Order_via_SAP__c</fullName>
    <formula>if 
( OR 
( AND 
( TEXT(gvp__Active__c) &lt;&gt; "No", 
Includes (gvp__Account_Groups__c,"Ship To"), 
Includes (Parent.gvp__Account_Groups__c,"Sold To") 
), 
AND 
( TEXT(gvp__Active__c) &lt;&gt; "No", 
Includes (gvp__Account_Groups__c,"Sold To") 
) 
) 
, 
"Puede crear Orden de Venta", 
"No se puede crear Orden de Venta" 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Can Order via SAP</label>
    <type>Text</type>
</CustomField>