unpackaged/main/default/objects/Account/fields/AccountAction__c.field-meta.xml
<CustomField>
    <fullName>AccountAction__c</fullName>
    <label>Account Action</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>