unpackaged/main/default/objects/Account/fields/AccountPositioning__c.field-meta.xml
<CustomField>
    <fullName>AccountPositioning__c</fullName>
    <label>Account Positioning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mainstream</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>