unpackaged/main/default/objects/Account/fields/ActivelyManaged__c.field-meta.xml
<CustomField>
    <fullName>ActivelyManaged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this Account actively managed by Beam Suntory?</inlineHelpText>
    <label>Actively Managed</label>
    <type>Checkbox</type>
</CustomField>