unpackaged/main/default/objects/Account/fields/Auto_Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Auto_Account_Key__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Auto Account Key</label>
    <type>AutoNumber</type>
</CustomField>