unpackaged/main/default/objects/Account/fields/Available_for_Single_barrel__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Single_barrel__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available for Single barrel ?</label>
    <type>Checkbox</type>
</CustomField>