unpackaged/main/default/objects/Account/fields/BackBarMerchandising__c.field-meta.xml
<CustomField>
    <fullName>BackBarMerchandising__c</fullName>
    <label>Back Bar Merchandising</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>