unpackaged/main/default/objects/Account/fields/BartenderTools__c.field-meta.xml
<CustomField>
    <fullName>BartenderTools__c</fullName>
    <label>Bartender Tools</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>