unpackaged/main/default/objects/Account/fields/BeamBarrels__c.field-meta.xml
<CustomField>
    <fullName>BeamBarrels__c</fullName>
    <label>Beam Barrels</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>