unpackaged/main/default/objects/Account/fields/BehindCounterMerchandising__c.field-meta.xml
<CustomField>
    <fullName>BehindCounterMerchandising__c</fullName>
    <label>Behind Counter Merchandising</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>