unpackaged/main/default/objects/Account/fields/BillTo__c.field-meta.xml
<CustomField>
    <fullName>BillTo__c</fullName>
    <label>Bill To #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>