unpackaged/main/default/objects/Account/fields/BottleService__c.field-meta.xml
<CustomField>
    <fullName>BottleService__c</fullName>
    <inlineHelpText>Does the Account offer bottle service?</inlineHelpText>
    <label>Bottle Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>