unpackaged/main/default/objects/Account/fields/BrandedGlassware__c.field-meta.xml
<CustomField>
    <fullName>BrandedGlassware__c</fullName>
    <label>Branded Glassware</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>