unpackaged/main/default/objects/Account/fields/BrandedSignage__c.field-meta.xml
<CustomField>
    <fullName>BrandedSignage__c</fullName>
    <label>Branded Signage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>