unpackaged/main/default/objects/Account/fields/BrandPartnerType__c.field-meta.xml
<CustomField>
    <fullName>BrandPartnerType__c</fullName>
    <label>Brand Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard &amp; Premium</fullName>
            </value>
            <value>
                <fullName>Super Premium</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>