unpackaged/main/default/objects/Account/fields/Carrier_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Code__c</fullName>
    <label>Carrier Code</label>
    <type>TextArea</type>
</CustomField>