unpackaged/main/default/objects/Account/fields/Case_Closed_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Notifications__c</fullName>
    <label>Case Closed Notifications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>