unpackaged/main/default/objects/Account/fields/CocktailMenu__c.field-meta.xml
<CustomField>
    <fullName>CocktailMenu__c</fullName>
    <inlineHelpText>Does this Account list brand names within drinks on their cocktail menu?</inlineHelpText>
    <label>Cocktail Menu</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>