unpackaged/main/default/objects/Account/fields/CorporateAccountDescription__c.field-meta.xml
<CustomField>
    <fullName>CorporateAccountDescription__c</fullName>
    <label>Corporate Account Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>