unpackaged/main/default/objects/Account/fields/CorporateAccountID__c.field-meta.xml
<CustomField>
    <fullName>CorporateAccountID__c</fullName>
    <description>Used for integration purposes</description>
    <label>Corporate Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>