unpackaged/main/default/objects/Account/fields/CorporateAccountType__c.field-meta.xml
<CustomField>
    <fullName>CorporateAccountType__c</fullName>
    <label>Corporate Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>TO BE DETERMINED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>