unpackaged/main/default/objects/Account/fields/CouldAccountDoBarrelProgram__c.field-meta.xml
<CustomField>
    <fullName>CouldAccountDoBarrelProgram__c</fullName>
    <label>Could Account Do Barrel Program?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>