unpackaged/main/default/objects/Account/fields/CounterActivity__c.field-meta.xml
<CustomField>
    <fullName>CounterActivity__c</fullName>
    <label>Counter Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Display w/ product</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Signage/Wraps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>