unpackaged/main/default/objects/Account/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>2 Digit Country Code</description>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>