unpackaged/main/default/objects/Account/fields/CraftCocktailScene__c.field-meta.xml
<CustomField>
    <fullName>CraftCocktailScene__c</fullName>
    <label>Craft Cocktail Scene</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>