unpackaged/main/default/objects/Account/fields/CrossMerchandisingAllowed__c.field-meta.xml
<CustomField>
    <fullName>CrossMerchandisingAllowed__c</fullName>
    <inlineHelpText>Is cross merchandising with other Beam products allowed?</inlineHelpText>
    <label>Cross Merchandising</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - All</fullName>
            </value>
            <value>
                <fullName>Yes - Beer</fullName>
            </value>
            <value>
                <fullName>Yes - Food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>