unpackaged/main/default/objects/Account/fields/CustomerLoyaltyPrograms__c.field-meta.xml
<CustomField>
    <fullName>CustomerLoyaltyPrograms__c</fullName>
    <label>Customer Loyalty Programs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>