unpackaged/main/default/objects/Account/fields/DisplayPotential__c.field-meta.xml
<CustomField>
    <fullName>DisplayPotential__c</fullName>
    <label>Display Potential</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bin (1-3 phys cs)</fullName>
            </value>
            <value>
                <fullName>Large (15+ phys cs)</fullName>
            </value>
            <value>
                <fullName>Medium (5-15 phys cs)</fullName>
            </value>
            <value>
                <fullName>Small (3-5 phys cs)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>