unpackaged/main/default/objects/Account/fields/Dist_Cust_ID_1__c.field-meta.xml
<CustomField>
    <fullName>Dist_Cust_ID_1__c</fullName>
    <description>Distributor customer ID 1 which is fed from Aperity.</description>
    <label>Dist Cust ID 1</label>
    <length>35</length>
    <type>Text</type>
</CustomField>