unpackaged/main/default/objects/Account/fields/Dist_Cust_ID_3__c.field-meta.xml
<CustomField>
    <fullName>Dist_Cust_ID_3__c</fullName>
    <description>Distributor customer ID 3 which is fed from Aperity.</description>
    <label>Dist Cust ID 3</label>
    <length>35</length>
    <type>Text</type>
</CustomField>